welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:-30: error: Unmatched closing brace '}' ignored here
	}
        ^Poucet:-29: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Poucet:0: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^